@@ -105,6 +105,7 @@ AC_CHECK_HEADERS([fcntl.h unistd.h])
 AC_C_CONST
 AC_CHECK_SIZEOF([int])
 AC_CHECK_SIZEOF([long])
+AC_TYPE_LONG_LONG_INT
 
 
 # check whether cpp computation of size of int and long in ftconfig.in works
